--- a/index.html
+++ b/index.html
@@ -4,55 +4,173 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
+    <!-- Bootstrap and jquery - make sure it is loaded first otherwise later css will be broken -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Thelastking.GitHub.io by TheLastKing</title>
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print"> -->
+    <title>Anorak</title>
   </head>
 
   <body>
-
     <header>
-      <div class="container">
-        <h1>Thelastking.GitHub.io</h1>
-        <h2></h2>
+      <div class="row">
+        <div class="col-lg-2 avatar">
+          <!-- <img alt="" src="https://avatars0.githubusercontent.com/u/7609203?v=3&s=460"/>
+               <div></div> -->
+        </div>
+        <div class="col-lg-12 container">
+          <h1>Hello, I'm Kha'nh</h1>
+          <h2 class="typed">
+            <div class="type-wrap">
+              <div id="typed-strings">
+                <p>Hey buddy..</p>
+                <p>Love programming?</p>
+                <p>Yes?</p>
+                <p>Let's rock ....\m/</p> 
+              </div>
+              <span id="typed" style="white-space:pre;"></span>
+            </div>
+          </h2>
 
-        <section id="downloads">
-          <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+          <section id="downloads">
+            <a id="view-me" style="width: 130px !important;" class="btn btn-github"><span class="icon"></span>About me</a>
+          </section>
+        </div>
       </div>
     </header>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    <div class="main-container">
+      <div id="side-bar" style="width:15%; float: left"> 
+        <div class="my-interests">
+          <h4>Interests</h4>
+        </div>
+        <div class="interest-list">
+        <ul>
+          <li>
+            <section id="downloads">
+              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Computer Vision</a>
+            </section>
+          </li>
+          <li>
+            <section id="downloads">
+              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Machine Learning</a>
+            </section>
+          </li>
+          <li>
+            <section id="downloads">
+              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Web Development</a>
+            </section>
+          </li>
+          <li>
+            <section id="downloads">
+              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Blender & Inkscape</a>
+            </section>
+          </li>
+          <li>
+            <section id="downloads">
+              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Mathematics</a>
+            </section>
+          </li>
+        </ul>
+        </div>
+        <div class="my-interests">
+          <h4>Contact</h4>
+        </div>
+      </div>
+      <div class="my-body" style="width:85%; float: left">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 700px">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active row">
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
+                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=AVMziiMMyeA"></iframe>
+              </div>
+            </div>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+            <div class="item">
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
+                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=zjwCPwYUa_w"></iframe>
+              </div>
+            </div>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+            <div class="item">
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
+                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=zjwCPwYUa_w"></iframe>
+              </div>
+            </div>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+            <div class="item">
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
+                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=zjwCPwYUa_w"></iframe>
+              </div>
+            </div>
+          </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
     </div>
-
-    
   </body>
+  <script src="javascripts/typed.js" type="text/javascript"></script>
+  <script>
+   $(function(){
+     $("#typed").typed({
+       // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
+       stringsElement: $('#typed-strings'),
+       typeSpeed: 0,
+       backDelay: 300,
+       loop: false,
+       contentType: 'html', // or text
+       // defaults to false for infinite loop
+       loopCount: false,
+       callback: function(){ foo(); },
+       resetCallback: function() { newTyped(); }
+     });
+
+     $(".reset").click(function(){
+       $("#typed").typed('reset');
+     });
+
+   });
+
+   function newTyped(){ /* A new typed object */ }
+
+   function foo(){ console.log("Callback"); }
+
+  </script>
+  <script>
+   var toggled = false;
+   /* $('#side-bar-hidden').hide(); */
+   $(document).ready(function() {
+     $('#view-me').click(function(){
+       if (toggled == false) {
+         $('.main-container').css("margin-left", "0px");
+         toggled = true;
+       } else {
+         $('.main-container').css("margin-left", "-340px");
+         toggled = false;
+       }
+     });
+   }); 
+  </script>
 </html>
