--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
                <div></div> -->
         </div>
         <div class="col-lg-12 container">
-          <h1>Hello, I'm Kha'nh</h1>
-          <h2 class="typed">
-            <div class="type-wrap">
-              <div id="typed-strings">
-                <p>Hey buddy..</p>
-                <p>Love programming?</p>
-                <p>Yes?</p>
-                <p>Let's rock ....\m/</p> 
-              </div>
-              <span id="typed" style="white-space:pre;"></span>
-            </div>
-          </h2>
-
+          <h1>Hey.. let's rock</h1>
+          <!-- <h2 class="typed">
+               <div class="type-wrap">
+               <div id="typed-strings">
+               <p>Hey buddy..</p>
+               <p>Love programming?</p>
+               <p>Yes?</p>
+               <p>Let's rock ....\m/</p> 
+               </div>
+               <span id="typed" style="white-space:pre;"></span>
+               </div>
+               </h2>
+             -->
           <section id="downloads">
-            <a id="view-me" style="width: 130px !important;" class="btn btn-github"><span class="icon"></span>About me</a>
+            <a id="view-me" style="width: 130px !important;" class="btn btn-github"><span class="icon"></span>About Me</a>
           </section>
         </div>
       </div>
@@ -46,43 +46,66 @@
     <div class="main-container">
       <div id="side-bar" style="width:15%; float: left"> 
         <div class="my-interests">
+          <h4>Me...</h4>
+        </div>
+        <div class="intro">
+          <h4 class="typed">
+            <div class="type-wrap">
+              <div id="typed-strings">
+                <p>.............</p>
+                <p>My name?</p>
+                <p>Kha'nh</p>
+                <p class="ask">Major?</p>
+                <p>Software Engineering</p> 
+                <p class="ask">Languages?</p> 
+                <p>Vietnamese, English </p> 
+                <p class="ask">University?</p> 
+                <p>Uni of Adelaide</p> 
+                <p class="ask">Interested in?</p>
+                <p>Please, see below</p> 
+              </div>
+              <span id="typed" style="white-space:pre;"></span>
+            </div>
+          </h4>
+        </div>
+        <div class="my-interests">
           <h4>Interests</h4>
         </div>
         <div class="interest-list">
-        <ul>
-          <li>
-            <section id="downloads">
-              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Computer Vision</a>
-            </section>
-          </li>
-          <li>
-            <section id="downloads">
-              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Machine Learning</a>
-            </section>
-          </li>
-          <li>
-            <section id="downloads">
-              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Web Development</a>
-            </section>
-          </li>
-          <li>
-            <section id="downloads">
-              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Blender & Inkscape</a>
-            </section>
-          </li>
-          <li>
-            <section id="downloads">
-              <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Mathematics</a>
-            </section>
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <section id="downloads">
+                <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Computer Vision</a>
+              </section>
+            </li>
+            <li>
+              <section id="downloads">
+                <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Machine Learning</a>
+              </section>
+            </li>
+            <li>
+              <section id="downloads">
+                <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Web Development</a>
+              </section>
+            </li>
+            <li>
+              <section id="downloads">
+                <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Blender & Inkscape</a>
+              </section>
+            </li>
+            <li>
+              <section id="downloads">
+                <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Mathematics</a>
+              </section>
+            </li>
+          </ul>
         </div>
-        <div class="my-interests">
-          <h4>Contact</h4>
-        </div>
+        <!-- <div class="my-interests">
+             <h4>Contact</h4>
+             </div> -->
       </div>
       <div class="my-body" style="width:85%; float: left">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 700px">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 800px">
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -94,26 +117,26 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
             <div class="item active row">
-              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
-                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=AVMziiMMyeA"></iframe>
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 50px;">
+                <iframe style="height: 650px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/YGn5coozu4M"></iframe>
               </div>
             </div>
 
             <div class="item">
-              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
-                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=zjwCPwYUa_w"></iframe>
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 50px;">
+                <iframe style="height: 650px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/wL-2Cu6zSNk"></iframe>
               </div>
             </div>
 
             <div class="item">
-              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
-                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=zjwCPwYUa_w"></iframe>
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 50px;">
+                <iframe style="height: 650px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/lN3psvKJNvQ"></iframe>
               </div>
             </div>
 
             <div class="item">
-              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 30px;">
-                <iframe style="height: 600px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/v=zjwCPwYUa_w"></iframe>
+              <div class="col-lg-6 col-lg-offset-3 embed-responsive embed-responsive-4by3" style="margin-top: 50px;">
+                <iframe style="height: 650px !important" class="embed-responsive-item" src="https://www.youtube.com/embed/zjwCPwYUa_w"></iframe>
               </div>
             </div>
           </div>
@@ -133,32 +156,31 @@
   </body>
   <script src="javascripts/typed.js" type="text/javascript"></script>
   <script>
+
+   var setting = {// strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
+     stringsElement: $('#typed-strings'),
+                  typeSpeed: 0,
+                  backDelay: 300,
+                  loop: true,
+                  contentType: 'html', // or text
+                  // defaults to false for infinite loop
+                  loopCount: false,
+                  callback: function(){ foo(); },
+                  resetCallback: function() { newTyped(); }
+   }
+
    $(function(){
-     $("#typed").typed({
-       // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
-       stringsElement: $('#typed-strings'),
-       typeSpeed: 0,
-       backDelay: 300,
-       loop: false,
-       contentType: 'html', // or text
-       // defaults to false for infinite loop
-       loopCount: false,
-       callback: function(){ foo(); },
-       resetCallback: function() { newTyped(); }
-     });
+     $("#typed").typed(setting);
 
      $(".reset").click(function(){
        $("#typed").typed('reset');
      });
-
    });
 
    function newTyped(){ /* A new typed object */ }
 
    function foo(){ console.log("Callback"); }
 
-  </script>
-  <script>
    var toggled = false;
    /* $('#side-bar-hidden').hide(); */
    $(document).ready(function() {
@@ -166,6 +188,8 @@
        if (toggled == false) {
          $('.main-container').css("margin-left", "0px");
          toggled = true;
+         $("#typed").typed('reset');
+         $("#typed").typed(setting);
        } else {
          $('.main-container').css("margin-left", "-340px");
          toggled = false;
