--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
           <!-- <img alt="" src="https://avatars0.githubusercontent.com/u/7609203?v=3&s=460"/>
                <div></div> -->
         </div>
-        <div class="col-lg-12 container">
-          <h1>Hey.. let's rock</h1>
+        <div class="col-lg-10 container">
+          <!-- <h1>Hey.. let's rock</h1> -->
+          <h1>【 LET'S ROCK 】</h1>
+
           <!-- <h2 class="typed">
                <div class="type-wrap">
                <div id="typed-strings">
@@ -46,13 +48,12 @@
     <div class="main-container">
       <div id="side-bar" style="width:15%; float: left"> 
         <div class="my-interests">
-          <h4>Me...</h4>
+          <h4>【 About Me 】</h4>
         </div>
         <div class="intro">
           <h4 class="typed">
             <div class="type-wrap">
               <div id="typed-strings">
-                <p>.............</p>
                 <p>My name?</p>
                 <p>Kha'nh</p>
                 <p class="ask">Major?</p>
@@ -69,7 +70,7 @@
           </h4>
         </div>
         <div class="my-interests">
-          <h4>Interests</h4>
+          <h4>【  Interests  】</h4>
         </div>
         <div class="interest-list">
           <ul>
