Adding link to web dev pages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <div class="col-lg-10 container">
           <!-- <h1>Hey.. let's rock</h1> -->
           <h1>【 LET'S ROCK 】</h1>
-
           <!-- <h2 class="typed">
                <div class="type-wrap">
                <div id="typed-strings">
@@ -86,7 +85,7 @@
             </li>
             <li>
               <section id="downloads">
-                <a href="https://github.com/TheLastKing" class="btn btn-github"><span class="icon"></span>Web Development</a>
+                <a href="https://thelastking.github.io/app-dev-resources/" class="btn btn-github"><span class="icon"></span>Web Development</a>
               </section>
             </li>
             <li>
